# salgsmester

./: .env.example  README.md  pyproject.toml
src/salgsmester/: __init__.py  config.py  data_models.py  main.py  nordnet_client.py  portfolio_manager.py  reporting.py  risk.py  strategy.py
